simplified transform query

--- a/notebooks/etl.ipynb
+++ b/notebooks/etl.ipynb
@@ -1172,36 +1172,19 @@
     "\tlocation,\n",
     "\tuser_agent\n",
     ")\n",
-    "select\n",
-    "\ttimestamp 'epoch' + e.ts / 1000 * interval '1 second' as start_time,\n",
-    "\te.userid AS user_id,\n",
-    "\te.level,\n",
-    "\ts.song_id,\n",
-    "\ts.artist_id,\n",
-    "\te.sessionid AS session_id,\n",
-    "\te.location AS location,\n",
-    "\te.useragent AS user_agent\n",
     "from staging.s_events as e\n",
-    "left join (  \n",
-    "        select\n",
-    "            dg.song_id,\n",
-    "            dg.artist_id,\n",
-    "            dg.artist_name,\n",
-    "            dg.title,\n",
-    "            dg.duration\n",
-    "        from (\n",
-    "            select\n",
-    "                any_value(d.song_id) as song_id,\n",
-    "                any_value(d.artist_id) as artist_id,\n",
-    "                d.artist_name,\n",
-    "                d.title,\n",
-    "                d.duration\n",
-    "            from (\n",
-    "                select distinct *\n",
-    "                from staging.s_songs\n",
-    "            ) d\n",
-    "            group by d.title, d.artist_name, d.duration\n",
-    "            ) as dg\n",
+    "left join (\n",
+    "\t\tselect\n",
+    "\t\t\tany_value(d.song_id) as song_id,\n",
+    "\t\t\tany_value(d.artist_id) as artist_id,\n",
+    "\t\t\td.artist_name,\n",
+    "\t\t\td.title,\n",
+    "\t\t\td.duration\n",
+    "\t\tfrom (\n",
+    "\t\t\tselect distinct *\n",
+    "\t\t\tfrom staging.s_songs\n",
+    "\t\t) as d\n",
+    "\t\tgroup by d.title, d.artist_name, d.duration\n",
     "    ) as s\n",
     "    on e.artist = s.artist_name\n",
     "    and e.song = s.title\n",
