--- a/notebooks/boto3.ipynb
+++ b/notebooks/boto3.ipynb
@@ -480,8 +480,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b><font color='red'>DO NOT RUN THIS UNLESS YOU ARE SURE <br/> \n",
-    "    We will be using these resources in the next exercises</span></b>"
+    "<b><font color='red'>DO NOT RUN THIS UNLESS YOU ARE SURE <br/>"
    ]
   },
   {
